// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LayoutGridCell /> should render 1`] = `
<div
  className="mdc-layout-grid__cell"
/>
`;

exports[`<LayoutGridCell /> should render with alignment 1`] = `
<div
  className="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--align-middle"
/>
`;

exports[`<LayoutGridCell /> should render with span 1`] = `
<div
  className="mdc-layout-grid__cell mdc-layout-grid__cell--span-2"
/>
`;
